--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "autoload": {
         "psr-4": {
             "Captcha\\": "src"
-        }
+        },
+        "classmap": [
+            "Lib/Recaptcha"
+        ]
     }
 }
