--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.16",
-        "cakephp/cakephp": "~3.0"
+        "php": ">=7.4",
+        "cakephp/cakephp": "4.5.x"
     },
     "autoload": {
         "psr-4": {
