--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "ivanamat/cakephp3-captcha",
-    "description": "CakePHP 3.x - reCAPTCHA plugin",
-    "keywords": ["cakephp", "cakephp3", "cake3", "plugin", "captcha", "recaptcha","google"],
+    "name": "ivanamat/cakephp-captcha",
+    "description": "CakePHP 4.5.x - reCAPTCHA plugin",
+    "keywords": ["cakephp", "cakephp4", "cakephp3", "cake3", "plugin", "captcha", "recaptcha","google"],
     "homepage": "https://github.com/ivanamat/cakephp-captcha",
     "type": "cakephp-plugin",
     "license": "MIT",
@@ -10,6 +10,11 @@
             "name": "Ivan Amat",
             "homepage": "http://www.ivanamat.es",
             "role": "Author"
+        },
+        {
+            "name": "BusaniPrepaid",
+            "homepage": "https://github.com/BusaniPrepaid",
+            "role": "Contributor"
         }
     ],
     "require": {
